--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -16,9 +17,12 @@
     "@types/leaflet": "^1.9.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.10",
     "leaflet": "^1.9.4",
+    "lucia": "^3.2.0",
     "luxon": "^3.4.4",
     "next": "14.2.4",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
@@ -38,6 +42,9 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "drizzle-kit": "^0.21.4",
+    "pg": "^8.11.5",
+    "@types/pg": "^8.11.6"
   }
 }
