--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 DATABASE_URL=""
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+R2_ACCESS_KEY_ID=""
+R2_SECRET_ACCESS_KEY=""
+R2_BUCKET_NAME=""
+R2_ACCOUNT_ID=""
