--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,5 @@ R2_DOMAIN=""
 ENCRYPTION_SECRET_KEY=""
 ENCRYPTION_SALT=""
 UMAMI_WEBSITE_ID=""
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=""
+TURNSTILE_SECRET_KEY=""
